# daw_test

./: .gitignore  CMakeLists.txt  README.md  shader.vert
include/: crate.h  worldgen.h
resources/: dither.frag  quad.frag  quad.vert  quad_fs.vert  shader.frag  shader.fragmentshader  shader.vert  shader.vertexshader  simpl.frag  simpl.vert
src/: main.c
state_mainstate/include/states/: mainstate.h
state_mainstate/src/: mainstate.c  worldgen.c
